# HonyGo_1.0

./: .env  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  LICENSE.txt  README.md  SECURITY.md  __init__.py  pyproject.toml  readme_cn.md  readme_en.md  requirements-dev.txt
.github/workflows/: python-app.yml
HonyGo/: COPYRIGHT.txt  LICENSE.txt  readme.md  requirements.txt  start_honygo.py
HonyGo/docs/: OCR_Optimization_Summary.md  OCR_Pool_API_Documentation.md
HonyGo/src/config/: ocr_logging_config.py  ocr_optimization.json  ocr_pool_config.py  ocr_pool_validator.py  ocr_system_config.json  roi_config.json  smart_region_predictor_config.json
HonyGo/src/core/ocr/: __init__.py
HonyGo/src/core/ocr/monitoring/: performance_dashboard.py  performance_monitor.py
HonyGo/src/core/ocr/optimization/: __init__.py  ocr_cache_manager.py
HonyGo/src/core/ocr/scripts/: __init__.py
HonyGo/src/core/ocr/services/: __init__.py  keyword_ocr_optimizer.py  ocr_pool_service.py
HonyGo/src/core/ocr/utils/: __init__.py
HonyGo/src/core/services/: __init__.py  intelligent_alert_service.py  service_registry.py  startup_monitoring_service.py  system_manager_service.py  unified_config_service.py
HonyGo/src/ui/: __init__.py  main.py
HonyGo/src/ui/services/: image_preprocessing_service.py  image_reference_service.py  intelligent_detection_service.py  logging_service.py  precise_image_reference_service.py  simulation_task_service.py  ui_service.py
HonyGo/src/ui/widgets/: __init__.py
HonyGo/src/ui/windows/: area_selector_window.py
HonyGo/supervisor/conf.d/: honygo_main.conf
HonyGo/supervisor/supervisor/conf.d/: honygo_main.conf
docs/: Coordinate_Service_Guide.md  DPI_Scaling_Fix_Guide.md  Dependency_Management_Guide.md  Enhanced_Logging_System_Guide.md  Enhanced_Signal_Handler_Guide.md  HonyGo_OCR_Service_Architecture.md  OCR_Optimization_Configuration_Guide.md  Unified_Coordinate_System_Standard.md  Unified_Keyword_Matcher_Standard.md
src/: __init__.py
src/config/: __init__.py  app_config.json  gpu_acceleration_config.json  intelligent_detection_data.json  logging_config.json  optimization_config.py  optimization_config_manager.py
src/core/: __init__.py
src/core/algorithms/: image_reference_algorithm.py
src/core/ocr/: async_ocr_service.py  port_manager.py
src/core/ocr/monitoring/: __init__.py
src/core/ocr/optimization/: gpu_accelerator.py  image_preprocessor.py  performance_optimizer.py  smart_region_predictor.py
src/core/ocr/scripts/: start_optimized_ocr_system.py
src/core/ocr/services/: comprehensive_ocr_optimizer.py  dynamic_scaling_manager.py  easyocr_service.py  ocr_api_server.py  ocr_pool_manager.py  precise_ocr_positioning_service.py  screenshot_ocr_optimizer.py
src/core/ocr/utils/: keyword_matcher.py  ocr_download_interceptor.py  ocr_logger.py
src/core/services/: build_logging_service.py  process_monitor_service.py  signal_handler_service.py  signal_utils.py  task_execution_monitor_service.py  unified_timer_service.py
src/scripts/: legacy_quick_start.bat
src/ui/services/: __init__.py  coordinate_service.py  cross_process_log_bridge.py  lightweight_task_execution_service.py  ocr_performance_service.py  roi_service.py  smart_click_service.py  unified_timer_service.py
src/ui/widgets/: keyword_marker.py
src/ui/windows/: main_window.py  ocr_pool_window.py
supervisor/: supervisord.conf
supervisor/conf.d/: honygo_ocr_pool.conf
